Velcro test First SandBox/src/objects/Strategy__c.object
<CustomObject>
    <description>Strategy employed for Account Plan</description>
    <fields>
        <fullName>AccountPlan__c</fullName>
        <label>Acct Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>Strategies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <label>Completed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategy_Completion_Date__c</fullName>
        <inlineHelpText>What is the estimated completion date of this Strategy?</inlineHelpText>
        <label>Strategy Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strategy_Overview__c</fullName>
        <inlineHelpText>Provide a brief description of the Strategy you plan to deploy for this Account</inlineHelpText>
        <label>Strategy Overview</label>
        <type>TextArea</type>
    </fields>
    <label>Strategy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>